CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
PROJECT(IPM-0.0.1)

# Find Required Libraries
FIND_PACKAGE(OpenCV REQUIRED)

# Include Libraries Directory
INCLUDE_DIRECTORIES(${Eigen_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

# Link Libraries
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})

# Add Libraries Definition
ADD_DEFINITIONS(-std=c++11)

# Get All Header Files
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/)
FILE(GLOB_RECURSE project_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")

# Get All Source Files
FILE(GLOB_RECURSE project_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

QT5_WRAP_CPP(project_HEADERS_MOC ${project_HEADERS})
QT5_WRAP_UI(project_FORMS_HEADERS ${project_FORMS})

ADD_EXECUTABLE(IPM ${project_SOURCES} ${project_HEADERS_MOC} ${project_FORMS_HEADERS})

TARGET_LINK_LIBRARIES(IPM
					  ${OpenCV_LIBRARIES}
)